WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
221490
[Cocoa] CRASH in MediaPlayerPrivateMediaSourceAVFObjC::removeAudioRenderer()
https://bugs.webkit.org/show_bug.cgi?id=221490
Summary
[Cocoa] CRASH in MediaPlayerPrivateMediaSourceAVFObjC::removeAudioRenderer()
Jer Noble
Reported
2021-02-05 10:41:13 PST
[Cocoa] CRASH in MediaPlayerPrivateMediaSourceAVFObjC::removeAudioRenderer()
Attachments
Patch
(15.75 KB, patch)
2021-02-05 10:44 PST
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Patch
(15.75 KB, patch)
2021-02-05 10:48 PST
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2021-02-05 10:41:45 PST
<
rdar://73966316
>
Jer Noble
Comment 2
2021-02-05 10:44:28 PST
Created
attachment 419431
[details]
Patch
Jer Noble
Comment 3
2021-02-05 10:48:32 PST
Created
attachment 419432
[details]
Patch
EWS
Comment 4
2021-02-05 14:40:28 PST
Committed
r272439
: <
https://trac.webkit.org/changeset/272439
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 419432
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug